--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-<head>
-<title>This is me </title> 
-</head>
-Hello there, awesome person!
-</body>
+
+    <body>
+
+        Hello there, I am prasanta999
+
+    </body>
